files/envoy.yaml
---
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80

    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          #codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: all
            virtual_hosts:
            - name: be_whoami
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: dc-1
          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}

  clusters:
  - name: dc-1
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    #http2_protocol_options: {}
    load_assignment:
      cluster_name: dc-1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: demo-1
                port_value: 80
        - endpoint:
            address:
              socket_address:
                address: demo-2
                port_value: 80
        - endpoint:
            address:
              socket_address:
                address: demo-3
                port_value: 80
...
